Bug 159907 - A11Y sidebar: highlighted text does not show its attributes in the Style inspector
Summary: A11Y sidebar: highlighted text does not show its attributes in the Style insp...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2
Keywords:
Depends on:
Blocks: a11y, Accessibility
  Show dependency treegraph
 
Reported: 2024-02-26 14:15 UTC by Gabor Kelemen (Collabora)
Modified: 2024-06-24 13:56 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (10.27 KB, application/vnd.oasis.opendocument.text)
2024-02-26 14:15 UTC, Gabor Kelemen (Collabora)
Details
Highlighting the problem in the Accessibility sidebar (31.53 KB, image/png)
2024-02-26 14:15 UTC, Gabor Kelemen (Collabora)
Details
The Style inspector does not show anything DF (33.63 KB, image/png)
2024-02-26 14:16 UTC, Gabor Kelemen (Collabora)
Details
The Style inspector shows there is DF after re-highlighting the indicated character (43.80 KB, image/png)
2024-02-26 14:16 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-02-26 14:15:00 UTC
Created attachment 192788 [details]
Example file from Writer

When in the Accessibility sidebar there is a warning about a character and the user changes to the Style inspector sidebar, the attributes of the highlighted area are not shown, unless re-highlighted.

1. Open attached file
2. Open the Accessibility sidebar
-> there is a warning about direct formatting, click on it to highlight the problematic part
3. Change to the Style inspector sidebar
-> there is no direct formatting indicated.
4. Highlight again the problematic dash in the document
-> the Style inspector now shows the direct formatting applied to the character

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 74185b8edf7f046a3372319da86a1d8ca0024c87
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default
Comment 1 Gabor Kelemen (Collabora) 2024-02-26 14:15:40 UTC
Created attachment 192789 [details]
Highlighting the problem in the Accessibility sidebar
Comment 2 Gabor Kelemen (Collabora) 2024-02-26 14:16:03 UTC
Created attachment 192790 [details]
The Style inspector does not show anything DF
Comment 3 Gabor Kelemen (Collabora) 2024-02-26 14:16:48 UTC
Created attachment 192791 [details]
The Style inspector shows there is DF after re-highlighting the indicated character
Comment 4 Gabor Kelemen (Collabora) 2024-02-26 14:20:09 UTC
This started in 7.1 with the first implementation of the accessibility check.
Comment 5 Dieter 2024-03-11 21:18:55 UTC
I confirm it with

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ab95ed2c4b1eddc2188bd455653a77140aa3816c
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

Place cursor in before dash => Style inspector shows DF
Place cursor behind dash => Style inspector doesn't show DF
Select dash from left to right => Style inspector shows DF
Select dash from right to left => Style inspector doesn't show DF

In Accessibility check cursor is before dash and therefore we have the same result as in Style inspector. So better solution would be, if cursor would be after dash.

Additional information
I miss the information in LO help [1] that result of Style inspector for characters depends on location of cursor 


[1] https://help.libreoffice.org/24.8/en-GB/text/swriter/01/style_inspector.html?DbPAR=WRITER#bm_id441641339111122
Comment 6 Commit Notification 2024-06-21 15:24:04 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a3bcf0840dec6f91acbe0fe9bc2f733f2a4ae3c7

tdf#159907 - A11Y - Fix highlighted text does not show its attributes

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-06-24 13:56:10 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/2fe3085f7764aded9ba35ade2476405cb569dc29

tdf#159907 - A11Y - Fix highlighted text does not show its attributes

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.