tdf#159907 - A11Y - Fix highlighted text does not show its attributes

in the Style inspector.

Set the cursor at the end of the highlighted text.

Change-Id: I68af50d5bcf91c3cfe603aeef9e88c088b391590
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169259
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>